authentication-service/k8s/rate-limit/1-filter-ratelimit.yaml
apiVersion: networking.istio.io/v1
kind: EnvoyFilter
metadata:
  name: filter-ratelimit
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-gateway
      istio: gateway
  configPatches:
  - applyTo: CLUSTER
    match:
      cluster:
        # kubernetes dns of your ratelimit service
        service: auth-service-server.auth-service.svc.cluster.local
    patch:
      operation: ADD
      value:
        name: rate_limit_cluster
        type: STRICT_DNS
        connect_timeout: 10s
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          # arbitrary  name
          cluster_name: rate_limit_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    # kubernetes dns of your ratelimit service
                    address: auth-service-server.auth-service.svc.cluster.local
                    port_value: 3000
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: 'envoy.filters.network.http_connection_manager'
            subFilter:
              name: 'envoy.filters.http.router'
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ratelimit
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
          # arbirary domain, ensure it matches with the domain used in the ratelimit service config
          domain: rate-limit-test
          failure_mode_deny: false
          rate_limit_service:
            grpc_service:
              envoy_grpc:
                # must match load_assignment.cluster_name from the patch to the CLUSTER above
                cluster_name: rate_limit_cluster
              timeout: 10s
            transport_api_version: V3
